# SpaceComms

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  agent.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-dev.yml  release.yml
dev-certs/: README.md  generate-certs.sh
docs/: api-reference.md  architecture.md  demo-guide.md  governance-and-evolution.md  implementation-plan.md  interop-guide.md  operations-and-runbook.md  overview-exec.md  performance-and-scaling.md  protocol-spec.md  regulatory-and-compliance.md
docs/proposals/: README.md
examples/: config.yaml  demo-cleanup.sh  demo-gui.sh  demo-secure.sh  demo.sh  node-a-config.yaml  node-a-tls-config.yaml  node-b-config.yaml  node-b-tls-config.yaml  sample-cdm.json
schemas/: cdm.schema.json
spacecomms-adapters/constellation-hub-mock/: Cargo.toml  Dockerfile  README.md
spacecomms-adapters/constellation-hub-mock/src/: main.rs
spacecomms-adapters/space-track-mock/: Cargo.toml  Dockerfile  README.md
spacecomms-adapters/space-track-mock/fixtures/: catalog.json  cdms.json
spacecomms-adapters/space-track-mock/src/: main.rs
spacecomms-core/: Cargo.toml
spacecomms-core/src/: config.rs  error.rs  lib.rs  main.rs
spacecomms-core/src/api/: mod.rs
spacecomms-core/src/cdm/: generator.rs  mod.rs  parser.rs  types.rs
spacecomms-core/src/node/: mod.rs  peer.rs  routing.rs  server.rs
spacecomms-core/src/protocol/: envelope.rs  messages.rs  mod.rs
spacecomms-core/src/storage/: memory.rs  mod.rs
tests/: Cargo.toml  resilience_test.rs
tests/integration/: mod.rs
ui/: app.js  index.html  style.css
