[workspace]
resolver = "2"
members = [
    "spacecomms-core",
    "spacecomms-adapters/space-track-mock",
    "spacecomms-adapters/constellation-hub-mock",
    "tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-org/spacecomms"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
