[package]
name = "spacecomms"
version = "1.0.0"
edition = "2021"
authors = ["SpaceComms Contributors"]
description = "An open, CDM-centric, BGP-like protocol for space traffic coordination"
license = "Apache-2.0"
repository = "https://github.com/your-org/spacecomms"
readme = "../README.md"
keywords = ["space", "cdm", "conjunction", "protocol", "stm"]
categories = ["aerospace", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for peering
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
pretty_assertions = "1.4"

[[bin]]
name = "spacecomms"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
