[package]
name = "spacecomms-integration-tests"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "integration"
path = "integration/mod.rs"
