[package]
name = "space-track-mock"
version = "1.0.0"
edition = "2021"
description = "Mock Space-Track API adapter for SpaceComms"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "space-track-mock"
path = "src/main.rs"
